- Reorg soap classes under webservice.soap. - Reorg remoting classes under webservice.remoting - Renamed all exception classes (got rid of AgilePHP_) and organized them into their respective packages. - Removing build directory from repo and adding svn:ignore property.
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@100 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
     <property name="test.logs" value="${test.dir}/logs"/>
     <property name="phpunit.reports" value="${build.dir}/reports/phpunit"/>
 
-    <version releasetype="Bugfix" file="VERSION" property="build.version"/>
+    <version releasetype="Minor" file="VERSION" property="build.version"/>
 
     <fileset dir="${src.dir}" id="srcfiles">
         <include name="**"/>
