- bug fix to remoting-example.html introduced by refactoring remoting component. - moved soap classes to webservice/soap - phpdoc updates - refactored build.xml to support new project structures
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@101 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,6 @@
     </fileset>
 
 	<fileset dir="${project.basedir}" id="distfiles">
-        <include name="apidoc/**"/>
 		<include name="src/**"/>
 		<include name="studio/**"/>
 		<include name="CHANGELOG"/>
@@ -58,11 +57,9 @@
         <jsMin targetDir="${build.dir}/AgilePHP" failOnError="true">
             <fileset dir="${build.dir}/AgilePHP">
                 <include name="AgilePHP.js"/>
-                <include name="json2.js"/>
+                <include name="webservice/remoting/json2.js"/>
             </fileset>
         </jsMin>
-        <move file="${build.dir}/AgilePHP/AgilePHP-min.js" tofile="${build.dir}/AgilePHP/AgilePHP.js" overwrite="true"/>
-        <move file="${build.dir}/AgilePHP/json2-min.js" tofile="${build.dir}/AgilePHP/json2.js" overwrite="true"/>
     </target>
 
     <target name="apidoc" description="Generates apidoc using phpDocumentor">
@@ -101,7 +98,6 @@
             <formatter todir="${phpunit.reports}" type="xml"/>
             <batchtest>
                 <fileset dir="${test.dir}/phpunit">
-                	<include name="UserRestServiceTest.php" />
                 	<exclude name="persistence/MSSQLTest.php"/>
 					<exclude name="persistence/PGSQLTest.php"/>
 					<exclude name="persistence/SQLiteTest.php"/>
