- Added stored procedure support to ORM. Added sproc tests to unit tests. - SQLite working again (no sproc or function support) - Created test/agilephp_test_sqlite.sql schema - Deleted test/persistence.xml
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@112 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/build.xml
+++ b/build.xml
@@ -109,6 +109,9 @@
 					<include name="*Test.php" />
                 </fileset>
 				<fileset dir="${test.dir}/phpunit">
+					<include name="orm/SQLiteTest.php" />
+                </fileset>
+				<fileset dir="${test.dir}/phpunit">
 					<include name="orm/MySQLTest.php" />
                 </fileset>
 				<fileset dir="${test.dir}/phpunit">
