- Refactored Identity package. Now allows for custom IdentityManager, email tasks, and authenticators.   Identity agilephp.xml configuration element and attributes are now optional - Refactored ORMFactory::loadDialect to ORMFactory::load - Comment fix to Remoting class. - Began aligning code with PEAR coding standards. - Created SessionProvider and abstracted persistence operations from the SessionScope component. Now   custom SessionProvider implementations can be created and configured using agilephp.xml. Identity   package re-integrated with SessionScope component. - Bug fix to ApplicationScope::destroy resulted in error if temp file has already been deleted - Created Mailer component - Removed FirePHP from build target since its not being used. Updated README and TODO
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@123 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/build.xml
+++ b/build.xml
@@ -118,6 +118,11 @@
 					<include name="orm/PGSQLTest.php" />
                 </fileset>
             </batchtest>
+			<batchtest>
+            	<fileset dir="${test.dir}/phpunit">
+					<include name="ScopeTests.php" />
+                </fileset>
+			</batchtest>
         </phpunit>
         <phpunitreport infile="${phpunit.reports}/testsuites.xml"  styledir="${phpunit.styles.dir}"
          					format="frames" todir="${phpunit.reports}/tests"/>
@@ -237,13 +242,6 @@
          command="pear channel-discover pear.phpunit.de"/>
         <exec dir="${project.basedir}" logoutput="true"
          command="pear install phpunit/PHPUnit"/>
-    </target>
-
-    <target name="install-firephp" description="Installs FirePHP via PEAR">
-        <exec dir="${project.basedir}" logoutput="true"
-         command="pear channel-discover pear.firephp.org"/>
-        <exec dir="${project.basedir}" logoutput="true"
-         command="pear install firephp/FirePHPCore"/>
     </target>
 
 </project>
