- Bug fix to InterceptorProxy. Interceptors which return null were resulting in   an assumption that no interception took place. Now interceptors that return null   result in null being returned to the caller. - Abstracted #@Cache interceptor to allow configurable "CacheProvider" implementations. - CacheProvider interface along with FileCacheProvider, XCacheProvider, and ApcCacheProvider   implementations. #@Cache defaults to FileCacheProvider. - Added cache element with provider attribute to agilephp.dtd so #@Cache interceptor   can be pre-configured in agilephp.xml - Added delete .cache directory operation to build.xml test and clean targets since   chown/chmod bug was fixed with new caching abstraction layer. - Bug fix to AgilePHP; when running under xcache, FrameworkException was not being autoloaded.   FrameworkException has now been moved to its own class and is the first class included.
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@138 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/build.xml
+++ b/build.xml
@@ -129,12 +129,14 @@
          <coverage-report outfile="${phpunit.reports}/coverage/coverage.xml">
       		<report todir="${phpunit.reports}/coverage"/>
     	</coverage-report>
+    	<delete dir="${test.dir}/.cache"/>
     </target>
 
 	<target name="dist" depends="main,apidoc,archive"/>
 
     <target name="clean" description="Deletes build related artifacts" depends="delete-logs">
         <delete dir="${build.dir}"/>
+        <delete dir="${test.dir}/.cache"/>
     </target>
 
     <target name="delete-logs" description="Deletes log files from test and studio packages">
