--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
     <property name="test.logs" value="${test.dir}/logs"/>
     <property name="phpunit.reports" value="${build.dir}/reports/phpunit"/>
 
-    <version releasetype="Bugfix" file="VERSION" property="build.version"/>
+    <version releasetype="Minor" file="VERSION" property="build.version"/>
 
     <fileset dir="${src.dir}" id="srcfiles">
         <include name="**"/>
@@ -95,7 +95,8 @@
 	 	<exec command="/usr/bin/phpunit --log-junit ${build.dir}/phpunit/logs/phpunit.xml
 	  		--coverage-clover ${build.dir}/phpunit/logs/phpunit.coverage.xml
 	  		--coverage-html ${build.dir}/phpunit/coverage/tests/
-	  		--configuration ${test.dir}/phpunit/phpunit.xml" />
+	  		--configuration ${test.dir}/phpunit/phpunit.xml
+	  		--colors" />
 	</target>
 
     <target name="test" description="Runs PHPUnit test suites">
